--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-control" content="no-cache">
     <meta http-equiv="Cache" content="no-cache">
-    <meta name="format-detection" content="telephone=no">
+    <meta name="format-detection" content="telephone=yes">
     <meta name="buildtime" date="<%= htmlWebpackPlugin.options.date %>">
     <script src="./static/global/index.js?ver=<%= htmlWebpackPlugin.options.timestamp %>"></script>
     <!--<script src="./static/load-helper/index.js?ver=<%= htmlWebpackPlugin.options.timestamp %>"></script>-->
