--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
     <!--<script type="text/javascript" src="https://pv.sohu.com/cityjson?ie=utf-8"></script>-->
     <script src="https://imgcache.qq.com/open/qcloud/video/vcplayer/TcPlayer-2.3.2.js" charset="utf-8"></script>
     <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
+    <!-- 接入客服 -->
+    <script>
+      (function (w, d, n, a, j) {
+        w[n] = w[n] || function () {
+          (w[n].a = w[n].a || []).push(arguments);
+        };
+        j = d.createElement('script');
+        j.async = true;
+        j.src ='https://qiyukf.com/script/01652e1010f414a7b74d5deed31f4172.js';
+        d.body.appendChild(j);
+      })(window, document, 'ysf');
+    </script>
     <!--  <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>-->
     <div id="app"></div>
     <!-- built files will be auto injected -->
