--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
         };
         j = d.createElement('script');
         j.async = true;
-        j.src ='https://gzssdllbwlkjyxgs.qiyukf.comscript/01652e1010f414a7b74d5deed31f4172.js';
+        j.src ='https://gzssdllbwlkjyxgs.qiyukf.com/script/01652e1010f414a7b74d5deed31f4172.js';
         d.body.appendChild(j);
       })(window, document, 'ysf');
     </script>
-    <!--  <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>-->
+     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
