--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         d.body.appendChild(j);
       })(window, document, 'ysf');
     </script>
-     <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script>
+     <!-- <script type="text/javascript" src="https://res.wx.qq.com/open/js/jweixin-1.3.2.js"></script> -->
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
