--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         };
         j = d.createElement('script');
         j.async = true;
-        j.src ='https://gzssdllbwlkjyxgs.qiyukf.com/script/01652e1010f414a7b74d5deed31f4172.js';
+        j.src ='https://qiyukf.com/script/01652e1010f414a7b74d5deed31f4172.js';
         d.body.appendChild(j);
       })(window, document, 'ysf');
     </script>
